syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/misc.proto";
import "api/src/models.proto";

service MarketService {
  rpc Set(api.Market) returns (api.Market);
  rpc Get(MarketRequest) returns (api.Market);
  rpc List(MarketListRequest) returns (api.Markets);
  rpc ChangeStatus(api.StatusChangeRequest) returns (api.Status);
}

message MarketRequest {
  // @inject_tag: json:"brokerage_id"
  string BrokerageID = 1;
  // @inject_tag: json:"market_name"
  string MarketName = 2;
}

message MarketListRequest {
  // @inject_tag: json:"brokerage_id"
  string BrokerageID = 1;
}